Bug 364439 - trying to switch to virtualdesktop by leftclick minimizes previewed apps unser Mousepointer instead of switching to desktop
Summary: trying to switch to virtualdesktop by leftclick minimizes previewed apps unse...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 5.5.1
Platform: openSUSE Linux
: NOR grave
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-18 00:56 UTC by Christo
Modified: 2016-06-20 22:09 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christo 2016-06-18 00:56:12 UTC
trying to switch to virtualdesktop by leftclick minimizes previewed apps unser mousepointer instead of switching to desktop

reactivating them from taskbar also irgnore windowsrules about position and desktop (both forced) 

Reproducible: Always

Steps to Reproduce:
1. switch to Desktop1 
2. Konsole running on Desktop2 
3. Click on Desktop2 (Konsole-preview under poimter)
4. I stay on Desktop1 but Konsole-Window on Desktop2 minimized to taksbar (preview in panel gone)

Actual Results:  
app minimizes

Expected Results:  
switch to desktop

opensuse LEAP 42.1 

KDE Frameworks 5.21.0
Qt 5.5.1 (kompiliert gegen 5.5.1)
Comment 1 Kai Uwe Broulik 2016-06-18 13:08:01 UTC
That's the task manager context menu stealing events from QML and then it gets confused.
Comment 2 Kai Uwe Broulik 2016-06-18 13:29:14 UTC
To reproduce:
1. Right click a task manager entry
2. Click any of the items in the menu

The menu will close but the next click to the panel will end up where the previous right click has happened, usually minimizing a window or something like that.

It does not happen if I just close the menu by clicking outside without choosing an action.
Comment 3 Eike Hein 2016-06-19 02:47:54 UTC
We solved this before on the C++ side for similar issues on panel menus and sometimes use EventForge in QML UIs to fix it. A similar fix will likely apply here. I'll investigate next week.
Comment 4 Christo 2016-06-19 20:03:57 UTC
(In reply to Eike Hein from comment #3)

Hello Elke,

thanks for taking care ;-) .. I  try to get this temporally working again by a downgrade .. which package of your distro would be affected by this bug in your opinion ? (may lead me to a trace regarding my distro)

thanks

-christoph-
Comment 5 Eike Hein 2016-06-20 03:45:12 UTC
The Task Manager applet is part of plasma-desktop upstream. I don't know how various distros split this up.
Comment 6 Eike Hein 2016-06-20 07:37:26 UTC
Git commit 613efb3244e0f09debe94298c590dbdefb970317 by Eike Hein.
Committed on 20/06/2016 at 07:36.
Pushed by hein into branch 'Plasma/5.7'.

Add back ungrab-on-delegate before showing context menu.

This was in the old implementation and got lost when transitioning
to the new context menu - but in the end it's still a QMenu opened
from a Quick view, which still gets just as confused, so it's still
needed. On the flip side, we know the fix works.

M  +1    -0    applets/taskmanager/package/contents/ui/ContextMenu.qml
M  +7    -0    applets/taskmanager/plugin/backend.cpp
M  +2    -0    applets/taskmanager/plugin/backend.h

http://commits.kde.org/plasma-desktop/613efb3244e0f09debe94298c590dbdefb970317
Comment 7 Christo 2016-06-20 22:09:02 UTC
i temporary downdraden my LEAP to plasma5-desktop-5.5.5-17.1.x86_64 .. as expected this "fixed" my urge .. 

i never recognised the feature , but clicking on the current virtual screen does a "show desktop" ... ilove it :D

thank you for taking care

-c-