Add back ungrab-on-delegate before showing context menu.

This was in the old implementation and got lost when transitioning
to the new context menu - but in the end it's still a QMenu opened
from a Quick view, which still gets just as confused, so it's still
needed. On the flip side, we know the fix works.

BUG:364439